# womtrees

./: .mise.toml  .pre-commit-config.yaml  .womtrees.toml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-14-review-diff-design.md  2026-02-14-sentinel-file-refresh-design.md  2026-02-14-session-resume-design.md  2026-02-14-update-in-place-cards-design.md  2026-02-15-refactor-services-design.md  2026-02-15-tmux-status-bar-design.md  2026-02-16-womtrees-toml-scripts-design.md  2026-02-18-custom-layouts-design.md  phase-1-core-cli.md  phase-2-tmux-integration.md  phase-3-claude-integration.md  phase-4-tui-kanban.md
src/womtrees/: claude.py  cli.py  config.py  db.py  diff.py  github.py  models.py  review.py  sound.py  tmux.py  worktree.py
src/womtrees/cli/: __init__.py  admin.py  hooks.py  info.py  items.py  popups.py  review_diff.py  utils.py
src/womtrees/services/: github.py  workitem.py
src/womtrees/sounds/: generate.py
src/womtrees/tui/: app.py  board.py  card.py  column.py  commands.py  comment_input.py  dialogs.py  diff_app.py  diff_view.py
src/womtrees/tui/dialogs/: __init__.py  auto_rebase.py  claude_stream.py  create.py  delete.py  edit.py  git_actions.py  help.py  merge.py  rebase.py
tests/: conftest.py  test_claude.py  test_cli.py  test_cli_hooks.py  test_config.py  test_db.py  test_db_claude_sessions.py  test_diff.py  test_popups.py  test_review.py  test_sound.py  test_tmux.py  test_tmux_status.py  test_tui.py  test_worktree.py
