[project]
name = "womtrees"
version = "0.1.0"
description = "Git worktree manager with tmux and Claude Code integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
]

[project.scripts]
wt = "womtrees.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/womtrees"]

[dependency-groups]
dev = [
    "pytest",
]
