[project]
name = "womtrees"
version = "0.1.0"
description = "Git worktree manager with tmux and Claude Code integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "claude-agent-sdk",
    "textual",
]

[project.scripts]
wt = "womtrees.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/womtrees"]

[dependency-groups]
dev = [
    "commitizen>=3.13.0",
    "mypy>=1.19.1",
    "pre-commit>=3.8.0",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "S101", # Use of `assert` detected
    "S603", # `subprocess` call: check for execution of untrusted input
    "S607", # Starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
